--- a/bff-private/package.json
+++ b/bff-private/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "npx tsc && node -r dotenv/config --es-module-specifier-resolution=node ./dist/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -24,13 +25,16 @@
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.11.48",
     "dotenv": "^10.0.0",
     "inversify": "^5.1.1",
+    "jest": "^28.1.3",
     "proxy-agent": "^5.0.0",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
