--- a/bff-private/tsconfig.json
+++ b/bff-private/tsconfig.json
@@ -7,6 +7,7 @@
         "types": [
             "reflect-metadata",
             "node",
+            "jest"
         ],
         "module": "ES6",
         "moduleResolution": "node",
