--- a/bff-private/package.json
+++ b/bff-private/package.json
@@ -22,6 +22,7 @@
     "koa-router": "^10.0.0",
     "lru-cache": "^6.0.0",
     "moment": "^2.29.1",
+    "mysql2": "^2.3.3",
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {
