--- a/bff-private/package.json
+++ b/bff-private/package.json
@@ -23,7 +23,9 @@
     "lru-cache": "^6.0.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
